代码, 注释整理